# cpp-ethereum

libethcore/: CMakeLists.txt
libstratum/: CMakeLists.txt  EthStratumClient.cpp  EthStratumClient.h
